--- a/tmux.conf
+++ b/tmux.conf
@@ -4,8 +4,10 @@ set -s escape-time 10                     # faster command sequences
 set -sg repeat-time 600                   # increase repeat timeout
 set -s focus-events on
 
-set -g prefix2 C-a                        # GNU-Screen compatible prefix
-bind C-a send-prefix -2
+# Set the prefix to ^A, like screen
+unbind C-b
+set -g prefix ^A
+bind a send-prefix
 
 set -g base-index 1
 set-window-option -g automatic-rename on
