Help tmux recover for long print commands

--- a/tmux.conf
+++ b/tmux.conf
@@ -14,6 +14,10 @@ set-window-option -g automatic-rename on
 set-option -g set-titles on
 set -g history-limit 10000
 
+# Help tmux recover for long print commands
+set -g c0-change-trigger 150
+set -g c0-change-interval 100
+
 setw -g mode-keys vi
 set -g mouse on
 setw -g monitor-activity on
